<resources>
    <string name="app_name">Yea</string>
    <string name="continue_">Continue</string>
    <string name="get_started">Get Started</string>
    <string name="next">next</string>
    <string name="full_name">Full Name</string>
    <string name="signup">Signup</string>
    <string name="already_have_acount">Already have an account?</string>
    <string name="confrim_password">Confirm Password</string>
    <string name="passeord">Password</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="forget_pass">Forgot Password ?</string>
    <string name="submit">Submit</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="activity_feed">Activity Feed</string>
    <string name="leaderboards">Leaderboard</string>
    <string name="speakers">Speakers</string>
    <string name="attendees">Attendees</string>
    <string name="sponsors">Sponsors</string>
    <string name="agenda">Agenda</string>
    <string name="logout">Logout</string>
    <string name="envelop">envelop</string>
    <string name="no_internet">Please Connect to Network!</string>
    <string name="likes">Likes</string>

    <string name="follow">Follow</string>
    <string name="search">Search</string>
    <string name="username">username</string>
    <string name="phone">Phone</string>
    <string name="company_name">Company Name</string>
    <string name="company_name_with_colon">Company Name:</string>
    <string name="job_title">Job Title</string>
    <string name="change_password">Change Password</string>
    <string name="request_pass_change">Request Password Change</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sponsorship_lvl">Sponsorship Level:</string>
    <string name="sponsor_ship_lvl">Sponsorship Level</string>
    <string name="contact_us">Contact us</string>
    <string name="future_session">Future Session</string>
    <string name="session_title">Session Title</string>
    <string name="session_type">Session Type</string>
    <string name="notifications">Notifications</string>
    <string name="organiser">Organiser</string>
    <string name="share_on">Share on</string>
    <string name="send">Send</string>
    <string name="write_a_message">Write a message...</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="create_post">Create Post</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_video">Add Video</string>
    <string name="post">Post</string>
    <string name="write_comment">Write Comment</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="pass_length">Password length should be greater than 6 characters</string>
    <string name="update_profile_tv">Update Profile</string>
    <string name="enter_name">Enter Name</string>


    <string name="selector_action_done">Done (%1$d/%2$d)</string>

    <string name="selector_preview">Preview</string>

    <string name="selector_reach_max_image_hint">You have selected %d images already!</string>


    <string name="tip_take_photo">Take Photo</string>
    <string name="msg_no_camera">Can\'t Launch Camera!</string>

    <string name="camera_temp_file_error">Temp File Error!</string>
    <string name="selector_folder_all">All Images</string>

    <string name="selector_caption">Select Images</string>
    <string name="selector_permission_error">Permission rejected，failed to work properly！</string>
    <string name="select_images">Please Select Images</string>
    <string name="no_leader_boards_found">No LeaderBoards Found</string>
    <string name="comments">Comments</string>
    <string name="enter_comment">Please enter your comment</string>
    <string name="no_comment_found">No comments found !</string>
    <string name="enter_message">Please Enter Message</string>
    <string name="no_chat_messages_found">No messages found!</string>
    <string name="no_notification_found">No More Notifications found!</string>
    <string name="no_sponsor_found">No sponsors found !</string>
    <string name="unFollow">unFollow</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="presentations">Presentations</string>
    <string name="enter_description">Enter Description to post</string>
    <string name="online">Online</string>
    <string name="sponsor">Sponsor</string>
    <string name="session">Session</string>
    <string name="enter_search_title">Enter Search Title</string>
    <string name="no_attendees_found">No attendees found!</string>
    <string name="share_using">Share using</string>
    <string name="points">Points</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_company">Enter company</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="correct_link">Correct Link is not available.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="follow_three">Please Follow three Users</string>
    <string name="done">Done</string>
    <string name="feed">Activity Feed</string>
    <string name="double_tap_to_exit">Double Tap to Exit App</string>

    <string name="unable_to_process_image">Unable to process the image</string>
    <string name="leaderboard_criteria">Leaderboard Criteria</string>
    <string name="Categories">Categories</string>
    <string name="all_notifications">All Notifications</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="sessions_with_s">Session(s)</string>
    <string name="text_wall">Text Wall</string>
    <string name="alert">Alert</string>
    <string name="filter">Filter</string>
    <string name="by_first_name">By First Name</string>
    <string name="by_sur_name">By Surname</string>
    <string name="by_job_title">By Job Title</string>
    <string name="by_company">By Company</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="no_attendees_found_with_this_name">No attendee found with this name.</string>
    <string name="clear">Clear</string>
    <string name="add_a_note">Add a note</string>
    <string name="save_and_send">Save and Send</string>
    <string name="write_some_thing">Write something...</string>
    <string name="enter_note">Please enter note</string>
    <string name="notes">Notes</string>
    <string name="note_saved_and_email">Note Saved and sent via email</string>
    <string name="meetings">Meetings</string>
    <string name="requests">Requests</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="date">Date here</string>
    <string name="profile">Profile</string>
    <string name="available">Available</string>
    <string name="not_confirmed">Not Confirmed</string>
    <string name="visit_website">Visit Website</string>
    <string name="save">Save</string>
    <string name="enter_website_link">Enter website link</string>
    <string name="enter_msg">Please Enter message!</string>

</resources>
