<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edit_profile">

    <include layout="@layout/layout_header_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <FrameLayout
                android:id="@+id/pickImage"

                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"

                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_20sdp">


                <ImageView
                    android:id="@+id/userImageView"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_placeholder" />

                <ImageView
                    android:id="@+id/camera_circle_orange_img"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="@dimen/_8sdp"
                    android:src="@drawable/circle_orange" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="@dimen/_8sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_camera_only" />


            </FrameLayout>

            <LinearLayout
                android:id="@+id/bg_container_ln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="#23527A"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <customfonts.EditText_fira_sans_light
                    android:id="@+id/userName_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_user_white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/full_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <customfonts.EditText_fira_sans_light
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_email_white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <customfonts.EditText_fira_sans_light
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_phone_white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:padding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_13sdp"

                    />

                <customfonts.EditText_fira_sans_light
                    android:id="@+id/company_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_compnay_white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/company_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_13sdp"

                    />

                <customfonts.EditText_fira_sans_light
                    android:id="@+id/job_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_job_white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/job_title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_13sdp"

                    />

                <customfonts.TextView_fira_sans_medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"

                        android:text="@string/male"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:text="@string/female"
                        android:textColor="@color/white" />

                </RadioGroup>

            </LinearLayout>

            <customfonts.TextView_fira_sans_medium
                android:id="@+id/update_profile_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@color/yellow_app"

                android:gravity="center"
                android:text="@string/update_profile_tv"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="vertical"

                android:padding="@dimen/_10sdp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@color/yellow_app"
                    android:gravity="center|left">

                    <customfonts.TextView_fira_sans_medium
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/change_password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />


                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:src="@drawable/right_arrow" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:background="#23527A">


                    <customfonts.TextView_fira_sans_medium

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:background="@color/yellow_app"
                        android:gravity="center"
                        android:text="@string/request_pass_change"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>